--- a/project5/capstone/templates/capstone/index.html
+++ b/project5/capstone/templates/capstone/index.html
@@ -1,5 +1,34 @@
 {% extends "capstone/layout.html" %}
+{% load static %}
 
 {% block body %}
-    TODO
+    <h1>Hi {% if user.pk %} {{ user.username }} {% else %} There {% endif %} </h1>
+
+    <p class="para"> Find news that match your interest!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div  class="d-flex justify-content-end p-4 backgroundColor">
+      <form action="#" class="form-inline my-4 w-100 justify-content-end fullWidthForm position-relative mr-4">
+        <input type="text" class="form-control text-box rounded-pill" placeholder="Start Here" required>
+        <div class="buttonContainer">
+          <button class="btn" type="submit"><i class="bi bi-check-circle-fill"></i></button>
+          <button class="btn" type="reset"><i class="bi bi-x-circle-fill"></i></button>
+        </div>
+        <span class="line"></span>   
+      </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h2> Results </h2>
+<div id="display-results">
+    None start searching for news! 
+</div>
+
+{% endblock %}
+
+{% block script %}
+    <script src="{% static 'capstone/index.js' %}"> </script>
 {% endblock %}
