--- a/project5/capstone/templates/capstone/layout.html
+++ b/project5/capstone/templates/capstone/layout.html
@@ -6,11 +6,15 @@
         <title>{% block title %}Capstone: News Site{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'capstone/styles.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+        {% block script %}
+        {% endblock %}
+
     </head>
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Capstone: Top News</a>
+            <a class="navbar-brand" href="#">Capstone: News Headlines </a>
           
             <div>
               <ul class="navbar-nav mr-auto">
@@ -20,7 +24,7 @@
                     </li>
                 {% endif %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">Latest News</a>
+                  <a class="nav-link" href="{% url 'index' %}">Latest</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
