--- a/project5/capstone/templates/capstone/layout.html
+++ b/project5/capstone/templates/capstone/layout.html
@@ -49,5 +49,6 @@
             {% block body %}
             {% endblock %}
         </div>
+        <footer>  Powered by <span class="tag is-success">NewsAPI</span> <br> Created with love by  Lami &copy;2022</footer>
     </body>
 </html>
