--- a/project5/capstone/static/capstone/styles.css
+++ b/project5/capstone/static/capstone/styles.css
@@ -8,3 +8,15 @@
   color:red;
 }
 
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+
+footer{
+  text-align: center;
+}
