--- a/project5/capstone/templates/capstone/layout.html
+++ b/project5/capstone/templates/capstone/layout.html
@@ -41,7 +41,7 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bookmark</a>
+                        <a class="nav-link" href="{% url 'bookmark' %}">Bookmark</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -62,6 +62,6 @@
             {% block body %}
             {% endblock %}
         </div>
-        <footer>  Powered by <span class="tag is-success">NewsAPI</span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami &copy;2022</footer>
+        <footer>  Powered by <span class="tag is-success">NewsAPI</span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami <br> CS50 &copy;2022</footer>
     </body>
 </html>
