working on server integration

--- a/project5/capstone/templates/capstone/index.html
+++ b/project5/capstone/templates/capstone/index.html
@@ -43,7 +43,24 @@
               <option value="Everything">Everything</option>
               <option value="Headlines"> HeadLines </option>
             </select>
-          
+        </div>
+      </div>
+        <div class="row">
+        <div class="col-md mb-3">
+        
+            <label for="newsLang">  <h6> Filter news by language</h6></label>
+            <select class="form-control" id="newsLang">
+              <option value="en">English</option>
+              <option value="ar"> Argentina </option>
+              <option value="de"> Germany </option>
+              <option value="es"> Spain </option>
+              <option value="fr"> France </option>
+              <option value="it"> Italy </option>
+              <option value="nl"> Netherland </option>
+              <option value="no"> Norway </option>
+              <option value="ru"> Russia </option>
+              <option value="pt"> Portugal </option>
+            </select>
         </div>
       </div>
       <div class="row">
