--- a/project5/capstone/templates/capstone/bookmark.html
+++ b/project5/capstone/templates/capstone/bookmark.html
@@ -1,10 +1,45 @@
 {% extends "capstone/layout.html" %}
+{% load static %}
 
 
 {% block body %}
 
-<h5>My Bookmarks</h5>
+<h2>{{user.username}} Bookmarks</h2>
+
+<div class="container">
+  <ul class="list-unstyled">
+	{% for news in articles %}
+	<div class="media">
+		<img src={{news.image}} width="64" height="64" class="align-self-center mr-3" alt={{news.title}}>
+		<div class="media-body">
+			 <h5 class="mt-0 mb-1">{{ news.title }} </h5>
+			  {{ news.timestamps | date }}  </br> <strong> {{ news.source }} </strong> </br>
+			 {{ news.description }} 
+			
+			</br>
+			 Written by {{ news.author }} 
+			</br>
+			<!-- </br> -->
+			  <span><a href={{news.imgurl}} target="_blank">Link to Full Article</a></span>
+			</br>
+			<button class="btn btn-danger delete" type="submit">Delete article</button>
+				
+
+		</div>
+	 </div>
+	</br>
+	{% empty %}
+	<p> Hi {{ user.username }}, you do not have any bookmarks headover to <a href="{% url 'index' %}">Home</a> to get started</p>
+
+	{% endfor %}
+	</ul>
+</div>
 {% endblock %}
+
+{% block script %}
+    <script src="{% static 'capstone/bookmarks.js' %}"> </script>
+{% endblock %}
+
 
 <div class="media">
   <div class="media-body">
