--- a/project5/capstone/templates/capstone/index.html
+++ b/project5/capstone/templates/capstone/index.html
@@ -1,12 +1,17 @@
 {% extends "capstone/layout.html" %}
 {% load static %}
 
+
+{% block style %}
+<link href="{% static 'capstone/styles.css' %}" rel="stylesheet">
+{% endblock %}
+
+
 {% block body %}
     <h1>Hi {% if user.pk %} {{ user.username }} {% else %} Newbie {% endif %} </h1>
 
    
 <div class="container">
-
 <div class="container text-center">
   <h3 class="pb-5">Search worldwide news that match your interest! </h3>
 
@@ -30,7 +35,7 @@
   <div class="px-3 pb-2">
       <div class="row type">
         <div class="col-md mb-3">
-            <label for="newsType">  <h6> Filter news by type</h6></label>
+            <label for="newsType">  <h6 class="h2"> Please select the news type</h6></label>
             <select class="form-control" id="newsType">
               <option value="Everything">Everything</option>
               <option value="Headlines"> HeadLines </option>
@@ -85,7 +90,7 @@
         <div class="row options Everything Headlines">
         <div class="col-md mb-3">
         
-            <label for="newsLang">  <h6> Filter news by language</h6></label>
+            <label for="newsLang">  <h6> Filter news by languages</h6>  </label>
             <select class="form-control" id="newsLang">
               <option value="en">English</option>
               <option value="ar"> Argentina </option>
