--- a/project5/capstone/templates/capstone/layout.html
+++ b/project5/capstone/templates/capstone/layout.html
@@ -3,17 +3,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+    <meta name="description" content="">
         <meta charset="utf-8">
          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Capstone: News Site{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'capstone/styles.css' %}" rel="stylesheet">
+        {% block style %}
+        {% endblock %}
+    
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
         {% block script %}
         {% endblock %}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">      
+        </script>
+
 
 
            <link rel="stylesheet" href=
@@ -21,10 +27,25 @@
     <script src=
 "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js">
     </script>
+    <style type="text/css">
+
+
+.footer {
+  width: auto;
+  padding: 0 15px;
+
+}
+
+/*.footer {
+  background-color: #f5f5f5;
+}*/
+    </style>
+
 
 
     </head>
     <body>
+        <div role="main" class="flex-shrink-0">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Capstone: News Headlines </a>
@@ -33,7 +54,7 @@
               <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
+                        <a class="nav-link" href="{% url 'profile' %}"><i class="bi bi-person-fill"></i> <strong>{{ user.username }}</strong></a>
                     </li>
                 {% endif %}
                 <li class="nav-item">
@@ -41,7 +62,8 @@
                 </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'bookmark' %}">Bookmark</a>
+                        <a class="nav-link" href="{% url 'bookmark' %}"><i class="bi bi-bookmark-heart"></i>Bookmark</a>
+
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
@@ -62,6 +84,12 @@
             {% block body %}
             {% endblock %}
         </div>
-        <footer>  Powered by <span class="tag is-success">NewsAPI</span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami <br> CS50 &copy;2022</footer>
+       </div>
+
+<footer class="footer mt-auto py-3">
+  <div >
+    <span class="text-muted"> Powered by <span class="tag is-success">NewsAPI</span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami <br> CS50 &copy;2022</span>
+  </div>
+</footer>
     </body>
 </html>
