--- a/project5/capstone/templates/capstone/login.html
+++ b/project5/capstone/templates/capstone/login.html
@@ -1,15 +1,25 @@
 {% extends "capstone/layout.html" %}
+{% load static %}
+
+{% block style %}
+<link rel="stylesheet" href="{% static 'capstone/form.css' %}" />
+{% endblock %}
+
+
 
 {% block body %}
 
-    <h2>Login</h2>
+    
 
     {% if message %}
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
+    <div class="text-center">
+    <form class="form-signin" action="{% url 'login' %}" method="post">
         {% csrf_token %}
+          <img class="mb-4" src="https://robohash.org/23.238.193.4.png" alt="profile_pics" width="72" height="72">
+             <h2 class="h2 mb-3 font-weight-normal"> Please Sign in</h2>
         <div class="form-group">
             <input autofocus class="form-control" type="text" name="username" placeholder="Username">
         </div>
@@ -17,8 +27,10 @@
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
         <input class="btn btn-primary" type="submit" value="Login">
+            <p class="mt-5 mb-3 text-muted">      Don't have an account?  <a href="{% url 'register' %}">Register here.</a> </p>
     </form>
+ </div>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+
 
 {% endblock %}
