--- a/project5/capstone/templates/capstone/register.html
+++ b/project5/capstone/templates/capstone/register.html
@@ -1,30 +1,54 @@
 {% extends "capstone/layout.html" %}
+{% load static %}
 
+{% block style %}
+<style type="text/css">
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+@media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 2.5rem;
+        }
+      }
+</style>
+<link rel="stylesheet" href="{% static 'capstone/form.css' %}" />
+{% endblock %}
 {% block body %}
-
-    <h2>Register</h2>
-
     {% if message %}
-        <div>{{ message }}</div>
+        <div class="form-group">{{ message }}</div>
     {% endif %}
-
-    <form action="{% url 'register' %}" method="post">
+    <div class="text-center">
+    <form class="form-signin"  action="{% url 'register' %}" method="post">
+        <img class="mb-4" src="https://robohash.org/23.238.193.4.png" alt="profile_pics" width="72" height="72">
+        <h2 class="h2 mb-3 font-weight-normal"> Register Here</h2>
         {% csrf_token %}
         <div class="form-group">
             <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
+            </div>
+    
+            <div class="form-group">
             <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
+            </div>
+
+            <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
+            </div>
+            
+            <div class="form-group">
             <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+            </div>
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Register">
+           
+        <p class="mt-5 mb-3 text-muted">  Already have an account? <a href="{% url 'login' %}">Log In here.</a></p>
     </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+</div>
 
 {% endblock %}
