--- a/project5/capstone/templates/capstone/bookmark.html
+++ b/project5/capstone/templates/capstone/bookmark.html
@@ -8,27 +8,35 @@
 
 {% block body %}
 
-<h2>{{user.username}} Bookmarks</h2>
+<h2 class="mb-1 mt-0 ml-1">{{user.username}} Bookmarks</h2>
 
+<hr/>
 <div class="container">
   <ul class="list-unstyled infinite-container">
   	{% csrf_token %}
 	{% for news in articles  %}
+
 	<div class="media bookmarks infinite-item" id="news{{ news.id }}">
 		<img src={{news.image}} width="64" height="64" class="align-self-center mr-3" alt={{news.title}}>
 		<div class="media-body">
+			 <span class=" h3 mt-0 mb-1" style="text-align:left;">{{ news.title }}  <span class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="top" title="Like button"> <i data-like={{news.like}} data-id={{news.id}} class="bi bi-balloon-heart-fill" 
+			 	> </i> </span></span>  <br/>
 
-			 <h5 class="mt-0 mb-1" style="text-align:left;">{{ news.title }} </h5>
-			  {{ news.timestamps | date }}  </br> <strong> {{ news.source }} </strong> </br>
+			  {{ news.timestamps | date }}  </br> 
+			  <p>
 			 {{ news.description }} 
+			  <a class="mt-1 pd-1" href={{news.imgurl}} target="_blank">Link to Full Article</a>
+			
 			
 			</br>
-			 Written by {{ news.author }} 
+			 Written by {{ news.author }}  
+			  retrieved from <strong> {{ news.source }} </strong> 
 			</br>
-		
-			  <span><a href={{news.imgurl}} target="_blank">Link to Full Article</a></span>
-			
-			<button class="btn btn-danger rounded-pill delete" data-btn="news{{ news.id }}" type="submit">Delete bookmark</button>	
+		</p>
+			 
+			<button class="btn btn-danger rounded-pill delete mt-1 pd-1" data-btn="news{{ news.id }}" type="submit">Delete bookmark</button>	
+
+
 	
 		</div>
 	 </div>
@@ -36,15 +44,28 @@
 	{% empty %}
 	<p> Hi {{ user.username }}, you do not have any bookmarks headover to <a href="{% url 'index' %}">Home</a> to get started</p>
 </br>
+</br>
 	{% endfor %}
 	</ul>
 </div>
 
-
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="toast-header">
+    <img src="..." class="rounded mr-2" alt="...">
+    <strong class="mr-auto">Bootstrap</strong>
+    <small class="text-muted">11 mins ago</small>
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="toast-body">
+    Hello, world! This is a toast message.
+  </div>
+</div>
  {% if articles.has_next %}
  	<a class="pagination__next" href="?page={{articles.next_page_number}}"></a>
  	{% endif %}
- 	<div class="page-load-status">
+ <div class="page-load-status">
   <div class="loader-ellips infinite-scroll-request">
     <span class="loader-ellips__dot"></span>
     <span class="loader-ellips__dot"></span>
@@ -60,10 +81,10 @@
 
 {% block script %}
     <script src="https://unpkg.com/infinite-scroll@4/dist/infinite-scroll.pkgd.js"> </script>
-      <script src="{% static 'capstone/bookmarks.js' %}"></script>
-      <script type="text/javascript">
+        <script type="text/javascript">
 
-      	document.addEventListener('DOMContentLoaded', ()=>{
+
+     document.addEventListener('DOMContentLoaded', ()=> {
       		// var infinite = new Waypoint.Infinite({
 	// 	element: document.querySelector('.infinite-container')
 	// });
@@ -102,9 +123,11 @@ function getPenPath() {
       	});
        	
 	   </script>
+    <script src="{% static 'capstone/bookmarks.js' %}"></script>
 
 
 
+<script type="text/javascript" src="{% static 'capstone/popper.min.js' %}"></script>
 {% endblock %}
 
   
