--- a/project5/capstone/templates/capstone/index.html
+++ b/project5/capstone/templates/capstone/index.html
@@ -44,22 +44,18 @@
       </div>
 
 
-    <div class="row options Everything ">
-        <div class="col-md-3 mb-3">
-            <label for="from">enter a start date</label>
+    <div class="row options Everything" data-date="true">
+        <div class=" col-md mb-3 p-2">
+            <label for="from" class="h6"> Start date</label>
             <input type="date" class="form-control" id="from" required>
-            <div class="invalid-feedback">
-                Please provide a valid form date.
-            </div>
+
         </div>
-        <div class="col-md-3 mb-3">
-            <label for="to">Enter an end date </label>
+        <div class="col-md mb-3 p-2" >
+            <label for="to" class="h6">End date </label>
             <input type="date" class="form-control" id="to" required>
-            <div class="invalid-feedback">
-                Please provide a valid form date.
-            </div>
         </div>
   </div>
+
   
 
     <div class="row options Everything Headlines">
@@ -67,17 +63,16 @@
           <h6> Source </h6>
           <input type="text" class="form-control news-source" placeholder="Enter a source like BBC News CNN Forbes">
         </div>
+
       </div>
 
-    <div class="row options Everything">
-        <div class="col-md mb-3">
-          <h6> Domain </h6>
-          <input type="text" class="form-control search-domain" placeholder="Enter a site domain like bbc.co.uk,techcrunch.com ">
+    <div class="row options Everything" data-date="true">
+        <div class="col-md mb-3 p-2">
+              <h6> Domain </h6>
+              <input type="text" class="form-control search-domain" placeholder="Enter a site domain like bbc.co.uk,techcrunch.com ">
         </div>
-    </div>
 
-    <div class="row options Everything">
-        <div class="col-md mb-3">  
+        <div class="col-md mb-3 p-2">  
             <label for="orderNews">  <h6> Order news by  </h6></label>
             <select class="form-control" id="orderNews">
               <option value="relevancy">relevancy</option>
@@ -185,8 +180,8 @@
       </div>
     <div class="row options Everything">
         <div class="col-md mb-3">
-          <h6> Result Page </h6>
-          <input type="text" class="form-control search-domain" placeholder="Enter a page number ">
+          <h6> <label for="searchPage">Result Page</label> </h6>
+          <input type="text" class="form-control search-domain" id="searchPage" placeholder="Enter a page number ">
         </div>
     </div>
    
@@ -202,7 +197,8 @@
 </div>
 
 </div>
-
+</br>
+</hr>
 
 
 <h2 id= "result-count"> Results </h2>
