--- a/project5/capstone/templates/capstone/userprofile.html
+++ b/project5/capstone/templates/capstone/userprofile.html
@@ -32,7 +32,14 @@
    bookmarks
     <span class="badge badge-primary badge-pill">{{ user.user_feeds }}</span>
   </li>
-
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+   Liked 
+    <span class="badge badge-primary badge-pill">{{ likeCount }}</span>
+  </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+   Total 
+    <span class="badge badge-primary badge-pill">{{ allCount }}</span>
+  </li>
 </ul>
 </div>
 
