added warning alert

--- a/project5/capstone/templates/capstone/_bookmarks.html
+++ b/project5/capstone/templates/capstone/_bookmarks.html
@@ -1,2 +1,3 @@
 {% for post in articles %}
-{% include 'capstone/bookmark.html' with post=post%}
+{% include 'capstone/bookmark.html' with news=post%}
+{% endfor %}
