--- a/project5/capstone/templates/capstone/layout.html
+++ b/project5/capstone/templates/capstone/layout.html
@@ -86,9 +86,9 @@
         </div>
        </div>
 
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-3 mb-0">
   <div >
-    <span class="text-muted"> Powered by <span class="tag is-success">NewsAPI</span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami <br> CS50 &copy;2022</span>
+    <span class="text-muted"> Powered by <span class="tag is-success"><a href="https://newsapi.org/" target="_blank">NewsAPI</a></span> <br> Created with <i class="bi bi-heart-fill"></i> by  Lami <br> CS50 &copy;2022</span>
   </div>
 </footer>
     </body>
