--- a/project5/capstone/templates/capstone/bookmark.html
+++ b/project5/capstone/templates/capstone/bookmark.html
@@ -16,11 +16,19 @@
   	{% csrf_token %}
 	{% for news in articles  %}
 
-	<div class="media bookmarks infinite-item" id="news{{ news.id }}">
+	<div class="media bookmarks infinite-item post" id="news{{ news.id }}">
 		<img src={{news.image}} width="64" height="64" class="align-self-center mr-3" alt={{news.title}}>
 		<div class="media-body">
-			 <span class=" h3 mt-0 mb-1" style="text-align:left;">{{ news.title }}  <span class="d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="top" title="Like button"> <i data-like={{news.like}} data-id={{news.id}} class="bi bi-balloon-heart-fill" 
-			 	> </i> </span></span>  <br/>
+			 <span class=" h3 mt-0 mb-1" style="text-align:left;">{{ news.title }}  <span class="d-inline-block" tabindex="0"> 
+
+			 	
+			 	<div class="tooltips"> <i data-like={{news.like}} data-id={{news.id}} class="bi bi-balloon-heart-fill" 
+			 	> </i> 
+        <span class="tooltiptext">like button</span>
+				</div>
+
+			 		 	</span> 
+</span>  <br/>
 
 			  <span class="pd-1 text-muted" style="color:grey;">{{ news.timestamps | date }} </span> </br> 
 			  <p>
@@ -34,7 +42,7 @@
 			</br>
 		</p>
 			 
-			<button class="btn btn-danger rounded-pill delete mt-1 pd-1" data-btn="news{{ news.id }}" type="submit">Delete bookmark</button>	
+			<button class="btn btn-danger rounded-pill delete mt-1 pd-1 hide" data-btn="news{{ news.id }}" type="submit">Delete bookmark</button>	
 
 
 	
